@@ -767,7 +767,13 @@ String DefaultLocalizationStrategy::keygenKeychainItemName(const String& host)
     return formatLocalizedString(WEB_UI_STRING("Key from %@", "Name of keychain key generated by the KEYGEN tag"), hostCFString.get());
 }
 
-#endif
+#if PLATFORM(IOS)
+String DefaultLocalizationStrategy::htmlSelectMultipleItems(int count)
+{
+    return formatLocalizedString(WEB_UI_STRING("%d Items", "Present the number of selected <option> items in a <select multiple> element (iOS only)"), count);
+}
+#endif // PLATFORM(IOS)
+#endif // PLATFORM(MAC)
 
 String DefaultLocalizationStrategy::imageTitle(const String& filename, const IntSize& size)
 {
